<resources>
    <string name="app_name">StreamBox</string>

    <!-- Push notification ID-->
    <string name="onesignal_app_id">xxxxxxxx-xxxxx-xxxxx-xxxxx-xxxxxxxx</string>

    <string name="categories">Categories</string>

    <string name="expiration">Expiration :</string>
    <string name="logged_in">Logged in :</string>

    <string name="live_tv_home">LIVE TV</string>
    <string name="movies_home">MOVIES</string>
    <string name="live_with_epg_home">LIVE WITH EPG</string>
    <string name="catch_up_home">CATCH UP</string>
    <string name="series_home">SERIES</string>
    <string name="multiple_screen">MULTISCREEN</string>

    <string name="favourite">Favourite</string>

    <!-- SelectPlayerActivity -->
    <string name="login_with_xtream_codes_api">LOGIN WITH XTREAM CODES API</string>
    <string name="play_single_stream">PLAY SINGLE STREAM</string>
    <string name="list_users">LIST USERS</string>

    <!--Dialog-->
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="upgrade">Upgrade</string>
    <string name="its_time_to_upgrade">Its time to Upgrade to the latest version of our application to get the best experience.</string>
    <string name="do_it_now">DO IT NOW</string>
    <string name="maintenance">Maintenance</string>
    <string name="temporarily_down_for_maintenance">Temporarily Down for Maintenance</string>
    <string name="we_are_performing_scheduled">we are performing scheduled maintenance. we should be back online shortly.</string>
    <string name="try_again_later">Try again later</string>
    <string name="sniffing_detected">Sniffing Detected</string>
    <string name="turn_off_all_sniffers_tools">Turn off all sniffers Tools and Vpn tools to access app</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="turn_off_developer_mode">Turn off Developer Mode to access the app</string>

    <!--MSG-->
    <string name="err_pass_end_space">Please do not add space at end</string>
    <string name="err_cannot_empty">Field cannot be empty</string>
    <string name="err_password_sort">This password is too shor</string>
    <string name="err_internet_not_connected">Please connect to internet</string>
    <string name="err_connect_net_try">Please connect to internet and try again</string>
    <string name="err_unauthorized_access">Unauthorized Access</string>
    <string name="retry">Retry</string>
    <string name="err_server_not_connected">Server not connected</string>
    <string name="err_server_error">Server Error</string>
    <string name="logout_success">Logout Successful</string>
    <string name="added_success">Added successfully.</string>
    <string name="err_no_data_found">No Data Found</string>
    <string name="err_no_cat_found">No Categories Found</string>

    <string name="fav_success">Added to Favourite</string>
    <string name="fav_remove_success">Removed from Favourite</string>

    <!--Profile -->
    <string name="card_holder_name">Card Holder name</string>
    <string name="xxxxxxxxx">xxxxxxxxx</string>
    <string name="expiry_date">Expiry date</string>
    <string name="xxxx_xx_xx">xxxx-xx-xx</string>
    <string name="subscription_info">Subscription info</string>
    <string name="card_connections">Connections</string>

    <!--Login/User -->
    <string name="enter_login_details">Enter Your Login Details</string>
    <string name="any_name">Any name</string>
    <string name="user_name">User name</string>
    <string name="user_password">Password</string>
    <string name="url_here_com_port">http://url_here.com:port</string>
    <string name="add_user">ADD USER</string>

    <string name="user_list_any_name">nemosofts</string>
    <string name="user_list_user_name">Username: </string>
    <string name="user_list_url">URL: </string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="device_settings">Device Settings</string>
    <string name="notifications">Notifications</string>
    <string name="wifi_setting">Wifi Setting</string>
    <string name="date_time">Date and time</string>
    <string name="profile">Profile</string>
    <string name="speed_test">Speed test</string>

    <!-- Player -->
    <string name="more_list">More List</string>

    <!--Movie Details-->
    <string name="directed_by">Directed By:</string>
    <string name="release_date">Release Date:</string>
    <string name="duration">Duration:</string>
    <string name="genre">Genre:</string>
    <string name="cast">Cast:</string>

    <!-- Single Stream -->
    <string name="add_video">ADD VIDEO</string>
    <string name="play_single_stream_url">Play Single Stream</string>
    <string name="stream_name_extension">http://url_here.com/stream_name.extension</string>
    <string name="stream_list">STREAM LIST</string>
    <string name="n_a">N/A</string>

    <string name="radio">Radio</string>
    <string name="error_no_radio_selected">no radio selected</string>
    <string name="filter">Filters</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="video_resize_crop">Crop</string>
    <string name="video_resize_fit">Fit</string>

    <!--Don't Change language-->
    <string name="todo">TODO</string>

</resources>