<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:paddingStart="@dimen/_15sdp"
    android:paddingEnd="@dimen/_15sdp"
    android:background="@drawable/bg_dark"
    android:id="@+id/theme_bg">

    <RelativeLayout
        android:layout_marginBottom="@dimen/_5sdp"
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:id="@+id/iv_back_page"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/default_icon_backspace_white"
            android:layout_centerVertical="true"
            android:background="@drawable/bar_selector"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <androidx.nemosofts.view.RoundedImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@+id/iv_back_page"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            app:riv_corner_radius="@dimen/_3sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@+id/iv_app_logo"
            android:text="@string/subscription_info"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/_2sdp"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/bg_login_btn"
        android:backgroundTint="#1BFFFFFF">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_person_flat" />

            <TextView
                android:id="@+id/card_any_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_ex" />

                    <androidx.nemosofts.view.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/card_bg"
                        android:scaleType="fitEnd"
                        app:riv_corner_radius="@dimen/_10sdp"/>

                    <TextView
                        android:id="@+id/tv_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/bg_border_active"
                        android:text="Active"
                        android:textColor="#05B60D"
                        android:textSize="@dimen/_7ssp"
                        android:textStyle="bold"
                        android:paddingStart="@dimen/_4sdp"
                        android:paddingEnd="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:paddingTop="@dimen/_2sdp"/>

                    <TextView
                        android:id="@+id/tv_active_none"
                        android:visibility="gone"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_7ssp"
                        android:background="@drawable/bg_border_wait"
                        android:textColor="#FF9800"
                        android:textStyle="bold"
                        android:paddingStart="@dimen/_4sdp"
                        android:paddingEnd="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:paddingTop="@dimen/_2sdp"/>

                    <TextView
                        android:id="@+id/card_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />

                    <ImageView
                        android:padding="@dimen/_5sdp"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_below="@+id/card_title"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/sim_card"
                        app:tint="#FD8810" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/card_connections"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_9ssp" />

                        <TextView
                            android:id="@+id/tv_active_connections"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:text="0 / 10"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_9ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/card_holder_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/tv_profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:text="@string/xxxxxxxxx"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/tv_card_expiry"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:text="@string/expiry_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/tv_card_expiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/xxxx_xx_xx"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>