<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark"
    tools:context=".activity.SignInActivity"
    android:baselineAligned="false"
    android:id="@+id/theme_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                android:gravity="center">

                <androidx.nemosofts.view.RoundedImageView
                    app:riv_corner_radius="@dimen/_5sdp"
                    android:src="@drawable/logo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"/>

                <RelativeLayout
                    android:id="@+id/rl_list_single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/bg_btn_ui_selector">

                    <ImageView
                        android:id="@id/iv_logo_3"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_link"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_toEndOf="@+id/iv_logo_3"
                        android:text="@string/stream_list"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_login_btn"
                android:backgroundTint="#1BFFFFFF"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/play_single_stream_url"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/bg_login"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/_7sdp"
                        android:src="@drawable/ic_profile"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/et_any_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/any_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/_5sdp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:nextFocusDown="@+id/tv_add_video_btn"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/bg_login"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/_7sdp"
                        android:src="@drawable/ic_link"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/et_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/stream_name_extension"
                        android:importantForAutofill="no"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:nextFocusUp="@id/et_any_name"
                        android:imeOptions="actionDone"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_add_video_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/add_video"
                    android:textColor="#E62E2F"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/bg_login_btn_selector"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>